--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,3 +1,9 @@
 #editor-container {
   height: 300px;
 }
+.card:hover {
+  border-color: dodgerblue;
+}
+.card:hover .card-link {
+  visibility: visible !important;
+}
