--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,10 +1,20 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link href="http://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      {{{body}}}
+    </div>
   </body>
 </html>
