--- a/server/views/adminEditPost.hbs
+++ b/server/views/adminEditPost.hbs
@@ -1,67 +1,96 @@
-<h1>Edit Post</h1>
-
-<div>
-  <input type="text" value="{{title}}" id="title" />
-</div>
-<!-- Create the editor container -->
-<div id="standalone-container">
-  <div id="toolbar-container">
-    <span class="ql-formats">
-      <select class="ql-font"></select>
-      <select class="ql-size"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-bold"></button>
-      <button class="ql-italic"></button>
-      <button class="ql-underline"></button>
-      <button class="ql-strike"></button>
-    </span>
-    <span class="ql-formats">
-      <select class="ql-color"></select>
-      <select class="ql-background"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-script" value="sub"></button>
-      <button class="ql-script" value="super"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-header" value="1"></button>
-      <button class="ql-header" value="2"></button>
-      <button class="ql-blockquote"></button>
-      <button class="ql-code-block"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-list" value="ordered"></button>
-      <button class="ql-list" value="bullet"></button>
-      <button class="ql-indent" value="-1"></button>
-      <button class="ql-indent" value="+1"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-direction" value="rtl"></button>
-      <select class="ql-align"></select>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-link"></button>
-      <button class="ql-image"></button>
-      <button class="ql-video"></button>
-      <button class="ql-formula"></button>
-    </span>
-    <span class="ql-formats">
-      <button class="ql-clean"></button>
-    </span>
-  </div>
-  <div id="editor-container">
-    <p>{{content}}</p>
+<div class="row">
+  <div class="col">
+    <div class="d-flex align-items-center">
+      <a href="/admin/posts" id="back-link" class="fs-2 pt-2"><i
+          class="bi bi-arrow-left-short"
+        ></i></a>
+      <h1 class="my-3">Edit Post</h1></div>
   </div>
 </div>
-<p></p>
-<div>
-  <input type="button" id="updateBtn" value="UPDATE" onclick="updatePost()" />
-  <input type="button" id="deleteBtn" value="DELETE" onclick="deletePost()" />
-  <input type="button" id="cancelBtn" value="CANCEL" onclick="cancel()" />
-
+<div class="row">
+  <div class="col">
+    <div class="mb-4">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" class="form-control" value="{{title}}" id="title" />
+    </div>
+    <!-- Create the editor container -->
+    <div id="standalone-container">
+      <label for="editor-container" class="form-label">Content</label>
+      <div id="toolbar-container">
+        <span class="ql-formats">
+          <select class="ql-font"></select>
+          <select class="ql-size"></select>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-bold"></button>
+          <button class="ql-italic"></button>
+          <button class="ql-underline"></button>
+          <button class="ql-strike"></button>
+        </span>
+        <span class="ql-formats">
+          <select class="ql-color"></select>
+          <select class="ql-background"></select>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-script" value="sub"></button>
+          <button class="ql-script" value="super"></button>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-header" value="1"></button>
+          <button class="ql-header" value="2"></button>
+          <button class="ql-blockquote"></button>
+          <button class="ql-code-block"></button>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-list" value="ordered"></button>
+          <button class="ql-list" value="bullet"></button>
+          <button class="ql-indent" value="-1"></button>
+          <button class="ql-indent" value="+1"></button>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-direction" value="rtl"></button>
+          <select class="ql-align"></select>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-link"></button>
+          <button class="ql-image"></button>
+          <button class="ql-video"></button>
+          <button class="ql-formula"></button>
+        </span>
+        <span class="ql-formats">
+          <button class="ql-clean"></button>
+        </span>
+      </div>
+      <div id="editor-container">
+        <p>{{content}}</p>
+      </div>
+    </div>
+    <p></p>
+    <div>
+      <input
+        type="button"
+        class="btn btn-outline-success"
+        id="updateBtn"
+        value="UPDATE"
+        onclick="updatePost()"
+      />
+      <input
+        type="button"
+        class="btn btn-outline-danger"
+        id="deleteBtn"
+        value="DELETE"
+        onclick="deletePost()"
+      />
+      <input
+        type="button"
+        class="btn btn-outline-secondary"
+        id="cancelBtn"
+        value="CANCEL"
+        onclick="cancel()"
+      />
+    </div>
+  </div>
 </div>
-
 <!-- Include the Quill library -->
 <script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="http://localhost:3000/scripts.js"></script>
