[UPDATE] Add new button to Admin/posts page

--- a/server/views/adminPostsList.hbs
+++ b/server/views/adminPostsList.hbs
@@ -18,6 +18,21 @@
           </div>
         </div>
       {{/each}}
+      <div class="col-4">
+        <div id="new-card" class="card text-center">
+          <div
+            class="card-body d-flex justify-content-center align-items-center"
+          >
+            <p class="card-text">
+              <H5><a
+                  href="/admin/posts/new"
+                  class="link-success link-underline-opacity-0"
+                ><i class="bi bi-plus"></i>
+                  NEW</a></H5>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
