--- a/server/views/adminEditPost.hbs
+++ b/server/views/adminEditPost.hbs
@@ -62,7 +62,6 @@
         </span>
       </div>
       <div id="editor-container">
-        <p>{{content}}</p>
       </div>
     </div>
     <p></p>
@@ -91,6 +90,10 @@
     </div>
   </div>
 </div>
+<div id="content" class="d-none">{{content}}</div>
 <!-- Include the Quill library -->
+<script>
+  var content = JSON.parse(document.getElementById("content").innerText);
+</script>
 <script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="http://localhost:3000/scripts.js"></script>
