--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Admin | {{title}}</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
