--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -13,7 +13,7 @@
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
+    <div class="container min-vh-100">
       {{{body}}}
     </div>
   </body>
