[ADD] Implement auth/login post route

--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -25,6 +25,7 @@
           <div>
             <input
               type="button"
+              id="login"
               class="btn btn-outline-success"
               value="Login"
               onclick="login()"
