--- a/server/views/adminEditPost.hbs
+++ b/server/views/adminEditPost.hbs
@@ -97,3 +97,6 @@
 </script>
 <script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="http://localhost:3000/scripts.js"></script>
+<script>
+  setupEditor();
+</script>
