--- a/server/views/adminNewPost.hbs
+++ b/server/views/adminNewPost.hbs
@@ -87,3 +87,6 @@
 <!-- Include the Quill library -->
 <script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="http://localhost:3000/scripts.js"></script>
+<script>
+  setupEditor();
+</script>
