[ADD] Implement Admin/profile route Currently only changePassword feature

--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -17,8 +17,8 @@
       <div class="container">
         <a class="navbar-brand text-white" href="#">Navbar</a>
         <div class="float-end d-flex align-items-center">
-          Welcome
-          {{user}}
+          <span>Welcome&nbsp;</span>
+          <a class="nav-link text-warning" href="/admin/profile">{{user}}</a>
           &nbsp;
           <a
             href="/auth/logout"
