[ADD] Implement admin/settings route

--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -20,6 +20,9 @@
           <span>Welcome&nbsp;</span>
           <a class="nav-link text-warning" href="/admin/profile">{{user}}</a>
           &nbsp;
+          <a href="/admin/settings" class="nav-link text-white"><i
+              class="bi bi-gear"
+            ></i></a>&nbsp;
           <a
             href="/auth/logout"
             id="logout-link"
