[ADD] implement /posts & /posts/:id routes

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,21 +1,6 @@
-#editor-container {
-  height: 300px;
+.post-title {
+  color: #7200c8;
 }
-.card:hover {
-  border-color: dodgerblue;
-}
-.card:hover .card-link {
-  visibility: visible !important;
-}
-
-#back-link {
-  margin-left: -32px;
-}
-
-#new-card {
-  height: 122px;
-}
-
-#logout-link {
-  padding-top: 2px;
+a.post-title {
+  text-decoration: none;
 }
