--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link href="http://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-    <link href="/style.css" rel="stylesheet" />
+    <link href="/admin.style.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar text-bg-dark">
