--- a/server/views/layouts/public.hbs
+++ b/server/views/layouts/public.hbs
@@ -13,6 +13,16 @@
   </head>
   <body>
     <div class="container min-vh-100">
+      <div class="row">
+        <div
+          class="col-6 offset-3 mb-5 mt-3 pb-3 border-bottom border-secondary-subtle"
+        >
+          <h1 class="site-title d-inline px-1 pb-1">My Coding Blog</h1>
+          <h2
+            class="text-body-tertiary fst-italic fw-light fs-3 mt-1"
+          >Everything About Javascript</h2>
+        </div>
+      </div>
       {{{body}}}
     </div>
   </body>
