--- a/server/views/posts.hbs
+++ b/server/views/posts.hbs
@@ -1,13 +1,16 @@
 <div class="row">
   <div class="col-6 offset-3">
     {{#each posts}}
-      <div>
-        <h4><a
-            class="post-title"
-            href="/posts/{{this.id}}"
-          >{{this.title}}</a></h4>
-        <p>{{this.content}}</p>
-      </div>
+      <article class="mb-5">
+        <header>
+          <h4 class="fw-bold">
+            <a class="post-title" href="/posts/{{this.id}}">{{this.title}}</a>
+          </h4>
+        </header>
+        <section>
+          <p>{{this.content}}</p>
+        </section>
+      </article>
     {{/each}}
   </div>
 </div>
