[UPDATE] Add footer to public layout

--- a/server/views/layouts/public.hbs
+++ b/server/views/layouts/public.hbs
@@ -24,7 +24,17 @@
         </div>
       </div>
       {{{body}}}
+      <div class="row">
+        <div class="col-6 offset-3">
+          <footer>
+            <p
+              class="text-center mt-2 pt-4 mb-4 border-top border-body-tertiary"
+            >{{@siteSettings.footer}}</p>
+          </footer>
+        </div>
+      </div>
     </div>
+
   </body>
   <script src="/auth.js"></script>
   <script src="/utils.js"></script>
