[UPDATE] Add landingPage to settings Add option to show landing page or not

--- a/server/views/adminSettings.hbs
+++ b/server/views/adminSettings.hbs
@@ -36,6 +36,19 @@
         id="siteFooter"
       />
     </div>
+
+    <div class="mb-4">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        value=""
+        id="landingPage"
+        checked="{{siteSettings.landingPage}}"
+      />
+      <label class="form-check-label" for="landingPage">
+        Show Landing Page
+      </label>
+    </div>
     <div>
       <input
         type="button"
