--- a/server/views/layouts/public.hbs
+++ b/server/views/layouts/public.hbs
@@ -15,12 +15,18 @@
     <div class="container min-vh-100 d-flex flex-column">
       <div class="row">
         <div
-          class="col-6 offset-3 mb-5 mt-3 pb-3 border-bottom border-secondary-subtle"
+          class="col-6 offset-3 mb-5 mt-3 pb-1 border-bottom border-secondary-subtle"
         >
           <h1 class="site-title d-inline px-1 pb-1">{{@siteSettings.title}}</h1>
           <h2
             class="text-body-tertiary fst-italic fw-light fs-3 mt-1"
           >{{@siteSettings.description}}</h2>
+          {{#if @siteSettings.landingPage}}
+            <a
+              href="/"
+              class="float-end text-body-tertiary text-decoration-none"
+            >About Me</a>
+          {{/if}}
         </div>
       </div>
       <div class="row flex-grow-1">
