[FIX] Correct AdminEditAbout links paths

--- a/server/views/adminEditAbout.hbs
+++ b/server/views/adminEditAbout.hbs
@@ -38,7 +38,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.email}}"
+            value="{{info.email}}"
             name="email"
           />
         </div>
@@ -49,7 +49,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.linkedin}}"
+            value="{{info.linkedin}}"
             name="linkedin"
           />
         </div>
@@ -60,7 +60,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.twitter}}"
+            value="{{info.twitter}}"
             name="twitter"
           />
         </div>
@@ -71,7 +71,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.stackoverflow}}"
+            value="{{info.stackoverflow}}"
             name="stackoverflow"
           />
         </div>
@@ -82,7 +82,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.github}}"
+            value="{{info.github}}"
             name="github"
           />
         </div>
@@ -93,7 +93,7 @@
           <input
             type="text"
             class="form-control"
-            value="{{info.links.instagram}}"
+            value="{{info.instagram}}"
             name="instagram"
           />
         </div>
