--- a/server/views/adminPostsList.hbs
+++ b/server/views/adminPostsList.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <h1>POSTS</h1>
+    <h1 class="my-3">POSTS</h1>
 
     <div id="posts-list" class="row g-3">
       {{#each posts}}
