--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -58,8 +58,33 @@
           </div>
         </div>
       </div>
+      <div
+        class="error-container d-none position-absolute top-0 start-50 translate-middle-x p-3"
+      >
+        <div
+          class="toast error align-items-center text-bg-danger border-0"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="d-flex">
+            <div class="toast-body">
+
+            </div>
+            <button
+              type="button"
+              class="btn-close btn-close-white me-2 m-auto"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            ></button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
-  <script src="/auth.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  ></script>
   <script src="/utils.js"></script>
+  <script src="/auth.js"></script>
 </html>
