--- a/server/views/adminEditPost.hbs
+++ b/server/views/adminEditPost.hbs
@@ -95,7 +95,7 @@
   var content = JSON.parse(document.getElementById("content").innerText);
 </script>
 <script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-<script src="http://localhost:3000/scripts.js"></script>
+<script src="/scripts.js"></script>
 <script>
   setupEditor();
 </script>
