[ADD] Implement mongodb version Also update and change views and json models accordingly Posts' Views, model and controller in particular

--- a/server/views/adminPostsList.hbs
+++ b/server/views/adminPostsList.hbs
@@ -9,7 +9,7 @@
             <div class="card-body">
               <h5 class="card-title">{{this.title}}</h5>
               <p class="card-text">
-                {{this.content}}
+                {{this.brief}}
               </p>
               <a
                 href="/admin/posts/{{this.id}}"
