--- a/server/views/posts.hbs
+++ b/server/views/posts.hbs
@@ -6,7 +6,7 @@
       </h4>
     </header>
     <section>
-      <p>{{this.content}}</p>
+      <p>{{this.brief}}</p>
     </section>
   </article>
 {{/each}}
