--- a/server/views/adminEditPost.hbs
+++ b/server/views/adminEditPost.hbs
@@ -94,7 +94,7 @@
 <script>
   var content = JSON.parse(document.getElementById("content").innerText);
 </script>
-<script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="/scripts.js"></script>
 <script>
   setupEditor();
