--- a/server/views/adminNewPost.hbs
+++ b/server/views/adminNewPost.hbs
@@ -85,7 +85,7 @@
   </div>
 </div>
 <!-- Include the Quill library -->
-<script src="http://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script src="/scripts.js"></script>
 <script>
   setupEditor();
