--- a/server/views/layouts/admin.hbs
+++ b/server/views/layouts/admin.hbs
@@ -9,7 +9,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <link href="http://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+    <link
+      href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
+      rel="stylesheet"
+    />
     <link href="/admin.style.css" rel="stylesheet" />
   </head>
   <body>
