--- a/server/public/landing.css
+++ b/server/public/landing.css
@@ -1,12 +1,12 @@
 .my-avatar {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-width: 10px !important;
   transition: all 0.5s;
 }
 .my-avatar:hover {
-  width: 170px;
-  height: 170px;
+  width: 130px;
+  height: 130px;
   border-width: 10px !important;
   border-color: rgb(226, 154, 249) !important;
 }
@@ -14,7 +14,7 @@
   color: #882ecd;
 }
 .my-bio p {
-  text-align: justify;
+  text-align: center;
 }
 .my-bio a {
   color: dodgerblue;
@@ -25,4 +25,23 @@
 
 .my-links a:hover {
   color: #882ecd;
+}
+
+@media (min-width: 1200px) {
+  .my-avatar {
+    width: 150px;
+    height: 150px;
+    border-width: 10px !important;
+    transition: all 0.5s;
+  }
+  .my-avatar:hover {
+    width: 170px;
+    height: 170px;
+    border-width: 10px !important;
+    border-color: rgb(226, 154, 249) !important;
+  }
+
+  .my-bio p {
+    text-align: justify;
+  }
 }
