--- a/server/views/about.hbs
+++ b/server/views/about.hbs
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{@siteSettings.title}}</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -14,7 +17,9 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-6 mt-5 offset-3 d-flex align-items-center flex-column">
+        <div
+          class="col-12 col-lg-8 col-xl-6 mt-3 offset-lg-2 offset-xl-3 d-flex align-items-center flex-column"
+        >
           {{#if info.image}}
             <div
               class="my-avatar rounded-circle border border-light-subtle overflow-hidden"
@@ -37,7 +42,7 @@
           {{/if}}
 
           {{#if info.bio}}
-            <div class="my-bio border-bottom pb-3">
+            <div class="my-bio border-bottom py-3 px-2 px-lg-0">
               <p class="fs-5 fw-light text-secondary">{{info.bio}}</p>
               <p>
                 <a
