--- a/server/views/about.hbs
+++ b/server/views/about.hbs
@@ -1,19 +1,7 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{@siteSettings.title}}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+  {{#> head }}
     <link href="/landing.css" rel="stylesheet" />
-  </head>
+  {{/head}}
   <body>
     <div class="container">
       <div class="row">
