--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -1,16 +1,7 @@
 <html>
-  <head>
-    <title>{{@siteSettings.title}} | {{title}}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+ {{#> head }}
     <link href="/style.css" rel="stylesheet" />
-  </head>
+  {{/head}}
   <body>
     <div class="container min-vh-100">
       <div class="row vh-100 d-flex align-items-center">
