--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -2,7 +2,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{@siteSettings.title}}</title>
+    <title>
+      {{@siteSettings.title}}
+      {{#if title}} | {{title}}{{/if}}
+      </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
