[WIP] Make it Mobile-First Correct style of public views: /posts /post/id /auth/login

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -11,3 +11,9 @@ a.post-title {
 .back-link {
   margin-left: -32px;
 }
+
+@media (min-width: 576px) {
+  .post-content {
+    font-size: 1.25rem !important;
+  }
+}
