--- a/server/views/post.hbs
+++ b/server/views/post.hbs
@@ -1,7 +1,10 @@
 <main>
   <header>
     <div class="d-flex align-items-center">
-      <a href="/posts" class="back-link text-body-tertiary fs-2">
+      <a
+        href="/posts"
+        class="back-link d-none d-sm-block text-body-tertiary fs-2"
+      >
         <i class="bi bi-arrow-left-short"></i>
       </a>
       <h3 class="post-title">{{title}}</h3>
@@ -11,7 +14,7 @@
       <time datetime="{{date}}">{{date}}</time>
     </div>
   </header>
-  <section class="lh-lg mt-2 fs-5 fw-light">
+  <section class="post-content lh-lg mt-4 fs-6 fw-light">
     {{{content}}}
   </section>
 </main>
