--- a/server/views/posts.hbs
+++ b/server/views/posts.hbs
@@ -1,7 +1,7 @@
 {{#each posts}}
-  <article class="mb-5">
+  <article class="mb-2 mb-md-5">
     <header>
-      <h4 class="fw-bold">
+      <h4 class="fw-bold mb-0">
         <a class="post-title" href="/posts/{{this.id}}">{{this.title}}</a>
       </h4>
     </header>
