--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -5,7 +5,7 @@
   <body>
     <div class="container min-vh-100">
       <div class="row vh-100 d-flex align-items-center">
-        <div class="col-4 offset-4">
+        <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
           <div class="card">
             <div class="card-header">
               <h5>Admin Panel</h5>
