[FIX] Fix return link position in /post view

--- a/server/views/layouts/public.hbs
+++ b/server/views/layouts/public.hbs
@@ -13,16 +13,10 @@
             <h2
               class="text-body-tertiary fst-italic fw-light fs-3 mt-1"
             >{{@siteSettings.description}}</h2>
-            <a
-              href="/posts"
-              class="float-left d-sm-none text-body-tertiary fs-2"
-            >
-              <i class="bi bi-box-arrow-in-left"></i>
-            </a>
             {{#if @siteSettings.landingPage}}
               <a
                 href="/"
-                class="float-end text-body-tertiary mt-2 mt-sm-0 text-decoration-none"
+                class="float-end text-body-tertiary text-decoration-none"
               >About Me</a>
             {{/if}}
           </div>
