--- a/server/views/post.hbs
+++ b/server/views/post.hbs
@@ -1,11 +1,13 @@
 <main>
   <header>
-    <div class="d-flex align-items-center">
+    <div
+      class="d-flex align-items-start align-items-sm-center flex-column flex-sm-row"
+    >
       <a
         href="/posts"
-        class="back-link d-none d-sm-block text-body-tertiary fs-2"
+        class="back-link d-block d-sm-inline text-body-tertiary fs-4 pe-sm-2 mb-2 mb-sm-0"
       >
-        <i class="bi bi-arrow-left-short"></i>
+        <i class="bi bi-box-arrow-in-left"></i>
       </a>
       <h3 class="post-title">{{title}}</h3>
     </div>
