--- a/server/views/layouts/public.hbs
+++ b/server/views/layouts/public.hbs
@@ -39,7 +39,15 @@
     </div>
 
   </body>
+  
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/highlight.min.js"></script>
   <script src="/auth.js"></script>
   <script src="/utils.js"></script>
-
+  <script>
+    document.addEventListener("DOMContentLoaded", function (event) {
+      document.querySelectorAll("pre").forEach(function (el) {
+        hljs.highlightElement(el);
+      });
+    });
+  </script>
 </html>
