--- a/server/views/partials/head.hbs
+++ b/server/views/partials/head.hbs
@@ -15,5 +15,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/styles/atom-one-dark.min.css"
+    />
     {{> @partial-block }}
   </head>
